--- a/user-service.yml
+++ b/user-service.yml
@@ -13,4 +13,4 @@ gateway:
   ip: 112.158.146.30
 
 order_service:
-  url: http://127.0.0.1:8000/order-service/%s/orders
+  url: http://order-service/order-service/%s/orders
